[gd_scene load_steps=2 format=3 uid="uid://s4um51873xxx"]

[ext_resource type="Script" path="res://scripts/Common/hurt_box_component.gd" id="1_dq5hq"]

[node name="HurtBoxComponent" type="Area2D" groups=["hurtboxes"]]
light_mask = 0
script = ExtResource("1_dq5hq")

[node name="HurtShape" type="CollisionShape2D" parent="."]
debug_color = Color(1, 0.00193524, 0.0769509, 0.42)

[node name="disabledTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="disabledTimer" to="." method="_on_disabled_timer_timeout"]
